--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-devtools": "^4.26.1",
     "react-native": "0.70.3",
+    "react-native-image-picker": "^4.10.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-webview": "^11.23.1"
